--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,11 @@
+/* ROOT */
+
+:root {
+    --blue: #016FB9;
+    --lightBlue: #E3F2FD;
+    --black: #000807;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -13,42 +21,46 @@ body {
     margin: 0;
     padding: 0;
     font-size: 1.6rem;
-    background-color: #000000;
-    color: #ffffff;
+    background-color: var(--black);
+    color: var(--lightBlue);
 }
 
+/* LINKS */
+
 a:link {
-    color: #016FB9;
+    color: var(--blue);
     text-decoration: none;
 }
 
 a:visited {
-    color: #016FB9;
+    color: var(--blue);
     text-decoration: none;
 }
 
 a:hover {
-    color: #016FB9;
-    background-color: #E3F2FD;
+    color: var(--blue);
+    background-color: var(--lightBlue);
     text-decoration: none;
-    border-bottom: 5px solid #016FB9;
+    border-bottom: 5px solid var(--blue);
 }
 
 a:active {
-    color: #016FB9;
+    color: var(--blue);
     text-decoration: none;
-    border-bottom: 5px solid #016FB9;
+    border-bottom: 5px solid var(--blue);
 }
 
 .split {
     padding: 0.5rem;
-    background-color: #E3F2FD;
-    border-bottom: 5px solid #016FB9;
+    background-color: var(--lightBlue);
+    border-bottom: 5px solid var(--blue);
 }
 
 a:hover.split {
-    color: #000000;
+    color: var(--black);
 }
+
+/* HEADERS */
 
 h1, h2 {
     margin: 2rem;
@@ -62,6 +74,8 @@ h1 {
 h2 {
     font-size: 2.4rem;
 }
+
+/* CONTAINERS */
 
 .social {
     font-size: 2.4rem;
@@ -100,33 +114,33 @@ div, section {
     flex-direction: column;
 }
 
+/* CONTENT */
+
 .logo {
     width: 100%;
     display: flex;
     justify-content: center;
 }
 
-.speaker {
-    width: 10rem;
-}
-
 .text {
     white-space: nowrap;
 }
 
-.social a{
+.social a {
     padding: 0 0.5rem;
 }
 
-svg {
+img {
     display: none;
 }
+
+/* MEDIA QUERY */
 
 @media only screen and (max-width: 800px) {
     .leftPanel {
         display: none;
     }
-    svg {
+    img {
         display: block;
     }
 }
